# AO3-Scraping

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: kudos_recommender_cache.pkl
docs/: app.js  index.html  styles.css
notebooks/: ao3_works_kudos_eda.ipynb
scripts/: export_recommendations_for_web.py  recommend_similar_works.py  test_httpx_block_rate.py
src/ao3_scraper/: cli.py  http.py  models.py  parser.py  rate_limit.py  recommender.py  storage.py
tests/: conftest.py  test_cli.py  test_parser.py  test_storage.py
